--- a/app/src/main/res/layout/activity_order_product.xml
+++ b/app/src/main/res/layout/activity_order_product.xml
@@ -129,7 +129,7 @@
                         app:layout_constraintTop_toBottomOf="@+id/tvTenSanPham" />
 
                     <TextView
-                        android:id="@+id/textView7"
+                        android:id="@+id/tvDanhGia"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
@@ -141,13 +141,14 @@
                         app:layout_constraintTop_toBottomOf="@+id/tvTenSanPham" />
 
                     <ImageView
+                        android:id="@+id/imgDanhGia"
                         android:layout_width="14dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="60dp"
+                        android:layout_marginStart="68dp"
                         android:layout_marginBottom="8dp"
                         android:src="@drawable/baseline_arrow_forward_ios_24"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toEndOf="@+id/textView7" />
+                        app:layout_constraintStart_toEndOf="@+id/tvDanhGia" />
 
                     <LinearLayout
                         android:layout_width="65dp"
@@ -421,6 +422,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView5">
 
                 <EditText
+                    android:id="@+id/edtGhiChu"
                     android:layout_width="320dp"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="10dp"
@@ -474,9 +476,9 @@
                     android:paddingLeft="12dp"/>
 
                 <TextView
+                    android:id="@+id/tvGiaCuoi"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="192.000vnd"
                     android:textStyle="bold"
                     android:layout_marginTop="8dp"
                     android:paddingLeft="12dp"/>
@@ -496,6 +498,7 @@
                     android:layout_gravity="center">
 
                     <TextView
+                        android:id="@+id/tvThemGioHang"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:text="Thêm vào giỏ hàng"
