--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -102,7 +102,7 @@
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:text="a@gmail.com"/>
+        android:text="b@gmail.com"/>
 
     <EditText
         android:id="@+id/edtMatKhau"
@@ -142,15 +142,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="User"
-            android:checked="true"/>
+            android:text="User"/>
 
         <RadioButton
             android:id="@+id/radAdmin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Admin" />
+            android:text="Admin"
+            android:checked="true"/>
     </RadioGroup>
 
     <TextView
