--- a/app/src/main/res/layout/recycler_giohang_product.xml
+++ b/app/src/main/res/layout/recycler_giohang_product.xml
@@ -24,6 +24,7 @@
                 app:cardCornerRadius="150dp">
 
                 <ImageView
+                    android:id="@+id/imgProductGioHang"
                     android:layout_width="50dp"
                     android:layout_height="match_parent"
                     android:src="@drawable/caphe2" />
@@ -38,7 +39,7 @@
             android:layout_height="match_parent">
 
             <TextView
-                android:id="@+id/textView6"
+                android:id="@+id/tvGioHangTenSP"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -50,27 +51,28 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
+                android:id="@+id/tvGioHangTuyChinh"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="12dp"
                 android:text="Đá - Nhỏ - Thường"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView6" />
+                app:layout_constraintTop_toBottomOf="@+id/tvGioHangTenSP" />
 
 
             <ImageView
-                android:id="@+id/imageView6"
+                android:id="@+id/imgGioHangXoa"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="168dp"
                 android:layout_marginBottom="16dp"
                 android:src="@drawable/baseline_delete_outline_24"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/imageView5" />
+                app:layout_constraintStart_toEndOf="@+id/imgGioHangChinhSua" />
 
             <ImageView
-                android:id="@+id/imageView5"
+                android:id="@+id/imgGioHangChinhSua"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -88,17 +90,17 @@
                 android:background="@drawable/rectangle_border"
                 android:gravity="center_vertical"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/imageView6">
+                app:layout_constraintStart_toEndOf="@+id/imgGioHangXoa">
 
                 <ImageView
-                    android:id="@+id/imgMinus"
+                    android:id="@+id/imgGioHangMinus"
                     android:layout_width="10dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:src="@drawable/baseline_remove_24" />
 
                 <TextView
-                    android:id="@+id/tvCount"
+                    android:id="@+id/tvGioHangCount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -109,7 +111,7 @@
                     android:textStyle="bold" />
 
                 <ImageView
-                    android:id="@+id/imgPlus"
+                    android:id="@+id/imgGioHangPlus"
                     android:layout_width="10dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -118,14 +120,14 @@
             </LinearLayout>
 
             <TextView
-                android:id="@+id/textView7"
+                android:id="@+id/tvGioHangGia"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="88dp"
                 android:layout_marginTop="16dp"
                 android:text="30.000vnd"
                 android:textStyle="bold"
-                app:layout_constraintStart_toEndOf="@+id/textView6"
+                app:layout_constraintStart_toEndOf="@+id/tvGioHangTenSP"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <LinearLayout
@@ -135,17 +137,18 @@
                 android:orientation="horizontal"
                 app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView7"
+                app:layout_constraintTop_toBottomOf="@+id/tvGioHangGia"
                 app:layout_constraintVertical_bias="0.482">
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="x"
                     tools:layout_editor_absoluteX="287dp"
                     tools:layout_editor_absoluteY="51dp" />
 
                 <TextView
+                    android:id="@+id/tvGioHangSoLuong"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="2"
