hoan thanh trang CaiDatAdmin

--- a/app/src/main/res/layout/activity_chinh_sua_do_uong.xml
+++ b/app/src/main/res/layout/activity_chinh_sua_do_uong.xml
@@ -6,10 +6,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".activity.admin.ThemDoUongActivity">
+    tools:context=".activity.admin.ChinhSuaDoUongActivity">
 
     <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbarThemDoUong"
+        android:id="@+id/toolbarSuaDoUong"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
@@ -36,7 +36,7 @@
             android:background="@drawable/custom_edittext">
 
             <EditText
-                android:id="@+id/edtTenDoUong"
+                android:id="@+id/edtChinhSuaTen"
                 android:layout_width="match_parent"
                 android:layout_marginLeft="10dp"
                 android:layout_height="50dp"
@@ -61,7 +61,7 @@
             android:background="@drawable/custom_edittext">
 
             <Spinner
-                android:id="@+id/spn_the_loai"
+                android:id="@+id/spn_chinh_sua_do_uong"
                 android:layout_width="320dp"
                 android:layout_height="40dp"
                 android:layout_margin="10dp"
@@ -83,7 +83,7 @@
             android:background="@drawable/custom_edittext">
 
             <EditText
-                android:id="@+id/edtMoTaDoUong"
+                android:id="@+id/edtChinhSuaMoTa"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginLeft="10dp"
@@ -106,7 +106,7 @@
             android:background="@drawable/custom_edittext">
 
             <EditText
-                android:id="@+id/edtGiaDoUong"
+                android:id="@+id/edtChinhSuaGia"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginLeft="10dp"
@@ -129,7 +129,7 @@
             android:background="@drawable/custom_edittext">
 
             <EditText
-                android:id="@+id/edtKhuyenMaiDoUong"
+                android:id="@+id/edtChinhSuaKhuyenMai"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginLeft="10dp"
@@ -152,7 +152,7 @@
             android:background="@drawable/custom_edittext">
 
             <EditText
-                android:id="@+id/edtHinhAnhDoUong"
+                android:id="@+id/edtChinhSuaHinhAnh"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginLeft="10dp"
@@ -171,10 +171,10 @@
             android:layout_gravity="center">
 
             <TextView
-                android:id="@+id/btnThemTheLoai"
+                android:id="@+id/btnCapNhatDoUong"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="Lưu"
+                android:text="Cập nhật"
                 android:textColor="#fff"
                 android:gravity="center_vertical|center_horizontal"/>
 
