--- a/app/src/main/res/layout/fragment_ca_phe.xml
+++ b/app/src/main/res/layout/fragment_ca_phe.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/white"
     tools:context=".activity.user.CaPheFragment"
     android:orientation="vertical">
 
@@ -12,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:tabSelectedTextColor="#836b68"
+        android:background="@color/white"
         app:tabIndicatorHeight="2dp"
         app:tabIndicatorFullWidth="true"
         app:tabIndicatorColor="#836b68"
