--- a/app/src/main/res/layout/fragment_home_user.xml
+++ b/app/src/main/res/layout/fragment_home_user.xml
@@ -15,6 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:tabSelectedTextColor="#836b68"
+        android:background="@color/white"
         app:tabIndicatorHeight="5dp"
         app:tabIndicatorFullWidth="true"
         app:tabIndicatorColor="#836b68"
@@ -35,7 +36,12 @@
             android:id="@+id/tabSinhTo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Sinh tổ"/>
+            android:text="Sinh tố"/>
+        <com.google.android.material.tabs.TabItem
+            android:id="@+id/tabOthers"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Khác"/>
     </com.google.android.material.tabs.TabLayout>
 
     <androidx.viewpager2.widget.ViewPager2
