--- a/app/src/main/res/layout/fragment_don_hang_admin.xml
+++ b/app/src/main/res/layout/fragment_don_hang_admin.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
-    tools:context=".activity.admin.DonHangAdminFragment">
+    tools:context=".activity.admin.DonHangAdminFragment"
+    android:orientation="vertical"
+    android:background="@color/white">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rcDonHangAdmin"
+        android:layout_marginTop="40dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Fragment đơn hàng" />
+        android:layout_height="match_parent"/>
 
-</FrameLayout>
+</LinearLayout>
