--- a/app/src/main/res/layout/fragment_order_user.xml
+++ b/app/src/main/res/layout/fragment_order_user.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.user.OrderUserFragment"
-    android:background="@android:color/holo_orange_dark">
+    android:orientation="vertical"
+    android:background="@color/white">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rcOrderUser"
+        android:layout_marginTop="40dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/order_user_fragment"
-        android:textColor="@color/white"/>
+        android:layout_height="match_parent"/>
 
-</FrameLayout>
+</LinearLayout>
