--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -91,7 +91,7 @@
         android:background="@drawable/custom_edittext"
         android:drawableLeft="@drawable/baseline_lock_24"
         android:drawablePadding="8dp"
-        android:hint="Nhập mật khẩu của bạn"
+        android:hint="Nhập lại mật khẩu"
         android:inputType="textPassword"
         android:padding="8dp"
         android:textColor="@color/black"
@@ -132,7 +132,7 @@
             android:background="@drawable/custom_edittext"
             android:drawableLeft="@drawable/baseline_lock_24"
             android:drawablePadding="8dp"
-            android:hint="Nhập mật khẩu của bạn"
+            android:hint="Nhập mật khẩu mới"
             android:inputType="textPassword"
             android:padding="8dp"
             android:textColor="@color/black"
