--- a/app/src/main/res/layout/activity_chinh_sua_do_uong.xml
+++ b/app/src/main/res/layout/activity_chinh_sua_do_uong.xml
@@ -14,172 +14,199 @@
         android:layout_height="wrap_content"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
-    <LinearLayout
-        android:layout_marginTop="12dp"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:orientation="vertical">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="2dp"
-            android:layout_marginTop="20dp"
-            android:text="Tên đồ uống"/>
-
+        android:layout_height="650dp">
         <LinearLayout
+            android:layout_marginTop="12dp"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginBottom="20dp"
-            android:background="@drawable/custom_edittext">
-
-            <EditText
-                android:id="@+id/edtChinhSuaTen"
-                android:layout_width="match_parent"
-                android:layout_marginLeft="10dp"
-                android:layout_height="50dp"
-                android:background="@drawable/custom_no_border"/>
-
-        </LinearLayout>
-
-
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="2dp"
-            android:text="Thể loại"/>
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginBottom="20dp"
-            android:gravity="center"
-            android:background="@drawable/custom_edittext">
-
-            <Spinner
-                android:id="@+id/spn_chinh_sua_do_uong"
-                android:layout_width="320dp"
-                android:layout_height="40dp"
-                android:layout_margin="10dp"
-                android:background="@android:color/transparent" />
-
-        </LinearLayout>
-
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="2dp"
-            android:text="Mô tả"/>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginBottom="20dp"
-            android:background="@drawable/custom_edittext">
-
-            <EditText
-                android:id="@+id/edtChinhSuaMoTa"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_marginLeft="10dp"
-                android:background="@drawable/custom_no_border"/>
-
-        </LinearLayout>
-
-
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="2dp"
-            android:text="Giá"/>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginBottom="20dp"
-            android:background="@drawable/custom_edittext">
-
-            <EditText
-                android:id="@+id/edtChinhSuaGia"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_marginLeft="10dp"
-                android:background="@drawable/custom_no_border"/>
-
-        </LinearLayout>
-
-
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="2dp"
-            android:text="Khuyến mại"/>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginBottom="20dp"
-            android:background="@drawable/custom_edittext">
-
-            <EditText
-                android:id="@+id/edtChinhSuaKhuyenMai"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_marginLeft="10dp"
-                android:background="@drawable/custom_no_border"
-                android:hint="0"/>
-
-        </LinearLayout>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="2dp"
-            android:text="Hình ảnh"/>
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginBottom="20dp"
-            android:background="@drawable/custom_edittext">
-
-            <EditText
-                android:id="@+id/edtChinhSuaHinhAnh"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_marginLeft="10dp"
-                android:background="@drawable/custom_no_border"/>
-
-        </LinearLayout>
-
-
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            app:cardCornerRadius="10dp"
-            android:layout_marginTop="8dp"
-            android:backgroundTint="@color/brown"
-            android:layout_gravity="center">
+            android:layout_height="match_parent"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:orientation="vertical">
 
             <TextView
-                android:id="@+id/btnCapNhatDoUong"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="Cập nhật"
-                android:textColor="#fff"
-                android:gravity="center_vertical|center_horizontal"/>
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="2dp"
+                android:layout_marginTop="20dp"
+                android:text="Tên đồ uống"/>
 
-        </androidx.cardview.widget.CardView>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginBottom="20dp"
+                android:background="@drawable/custom_edittext">
 
-    </LinearLayout>
+                <EditText
+                    android:id="@+id/edtChinhSuaTen"
+                    android:layout_width="match_parent"
+                    android:layout_marginLeft="10dp"
+                    android:layout_height="50dp"
+                    android:background="@drawable/custom_no_border"/>
+
+            </LinearLayout>
+
+
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="2dp"
+                android:text="Thể loại"/>
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginBottom="20dp"
+                android:gravity="center"
+                android:background="@drawable/custom_edittext">
+
+                <Spinner
+                    android:id="@+id/spn_chinh_sua_do_uong"
+                    android:layout_width="320dp"
+                    android:layout_height="40dp"
+                    android:layout_margin="10dp"
+                    android:background="@android:color/transparent" />
+
+            </LinearLayout>
+
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="2dp"
+                android:text="Mô tả"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginBottom="20dp"
+                android:background="@drawable/custom_edittext">
+
+                <EditText
+                    android:id="@+id/edtChinhSuaMoTa"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:layout_marginLeft="10dp"
+                    android:background="@drawable/custom_no_border"/>
+
+            </LinearLayout>
+
+
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="2dp"
+                android:text="Giá"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginBottom="20dp"
+                android:background="@drawable/custom_edittext">
+
+                <EditText
+                    android:id="@+id/edtChinhSuaGia"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:layout_marginLeft="10dp"
+                    android:background="@drawable/custom_no_border"/>
+
+            </LinearLayout>
+
+
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="2dp"
+                android:text="Khuyến mại"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginBottom="20dp"
+                android:background="@drawable/custom_edittext">
+
+                <EditText
+                    android:id="@+id/edtChinhSuaKhuyenMai"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:layout_marginLeft="10dp"
+                    android:background="@drawable/custom_no_border"
+                    android:hint="0"/>
+
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="2dp"
+                android:text="Hình ảnh"/>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="200dp"
+                android:layout_height="40dp"
+                app:cardCornerRadius="10dp"
+                android:layout_marginTop="8dp"
+                android:backgroundTint="#5c5c3d"
+                android:layout_gravity="center">
+
+                <TextView
+                    android:id="@+id/btn_select_picture"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="Upload from gallery"
+                    android:textColor="#fff"
+                    android:gravity="center_vertical|center_horizontal"/>
+
+            </androidx.cardview.widget.CardView>
+
+            <ImageView
+                android:id="@+id/img_from_api"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:src="@mipmap/ic_launcher"/>
+
+
+<!--            <LinearLayout-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="50dp"-->
+<!--                android:layout_marginBottom="20dp"-->
+<!--                android:background="@drawable/custom_edittext">-->
+
+<!--                <EditText-->
+<!--                    android:id="@+id/edtChinhSuaHinhAnh"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="50dp"-->
+<!--                    android:layout_marginLeft="10dp"-->
+<!--                    android:background="@drawable/custom_no_border"/>-->
+
+<!--            </LinearLayout>-->
+
+        </LinearLayout>
+    </ScrollView>
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        app:cardCornerRadius="10dp"
+        android:layout_marginTop="8dp"
+        android:backgroundTint="@color/brown"
+        android:layout_gravity="center">
+
+        <TextView
+            android:id="@+id/btnCapNhatDoUong"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="Cập nhật"
+            android:textColor="#fff"
+            android:gravity="center_vertical|center_horizontal"/>
+
+    </androidx.cardview.widget.CardView>
 
 </LinearLayout>
