--- a/app/src/main/res/layout/recycler_don_hang_admin.xml
+++ b/app/src/main/res/layout/recycler_don_hang_admin.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:layout_height="110dp">
+    android:layout_height="120dp">
 
     <LinearLayout
         android:layout_marginLeft="10dp"
@@ -24,11 +24,12 @@
                 android:layout_gravity="center"
                 app:cardCornerRadius="150dp">
 
-                <ImageView
+                <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/imgDonHang"
-                    android:layout_width="50dp"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/caphe2" />
+                    android:layout_width="52dp"
+                    android:layout_height="52dp"
+                    android:padding="8dp"
+                    android:src="@drawable/imagecoffee"/>
 
 
             </androidx.cardview.widget.CardView>
@@ -121,6 +122,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingTop="4dp"
         android:background="@drawable/custom_break_line"/>
 
 </LinearLayout>
