--- a/app/src/main/res/layout/recycler_giohang_product.xml
+++ b/app/src/main/res/layout/recycler_giohang_product.xml
@@ -14,32 +14,28 @@
         android:layout_height="110dp"
         android:orientation="horizontal">
         <LinearLayout
-            android:layout_width="60dp"
+            android:layout_width="70dp"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:layout_marginLeft="6dp"
-            android:layout_marginRight="6dp">
+            android:layout_marginLeft="2dp"
+            android:layout_marginRight="2dp">
 
-            <androidx.cardview.widget.CardView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_gravity="center"
-                app:cardCornerRadius="150dp">
-
-                <ImageView
-                    android:id="@+id/imgProductGioHang"
-                    android:layout_width="50dp"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/caphe2" />
-
-
-            </androidx.cardview.widget.CardView>
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/imgGioHangProduct"
+                android:layout_width="62dp"
+                android:layout_height="60dp"
+                android:layout_marginStart="8dp"
+                android:background="@drawable/circle_border"
+                android:padding="8dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/imagecoffee" />
 
         </LinearLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
 
             <TextView
                 android:id="@+id/tvGioHangTenSP"
@@ -52,7 +48,6 @@
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
-
 
             <TextView
                 android:id="@+id/tvGioHangTuyChinh"
